# dsa

./: pyproject.toml
challenges/: binary_search.ipynb  weird_or_not.py
