[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["Ben Hill <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
pytest-watch = "^4.2.0"
argon2-cffi = "19.1.0"
jupyter = "^1.0.0"
jupyterlab = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
